--- a/ETL_Mini_Project_Starter_CodeHWeber.ipynb
+++ b/ETL_Mini_Project_Starter_CodeHWeber.ipynb
@@ -1930,30 +1930,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cf_id</th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>goal</th>\n",
+       "      <th>pledged</th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>backers_count</th>\n",
+       "      <th>country</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>launched_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>subcategory_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>147</td>\n",
+       "      <td>4661</td>\n",
+       "      <td>Baldwin, Riley and Jackson</td>\n",
+       "      <td>Pre-emptive tertiary standardization</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>CAD</td>\n",
+       "      <td>1970-01-01 00:00:01.581573600</td>\n",
+       "      <td>1970-01-01 00:00:01.614578400</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>3765</td>\n",
+       "      <td>Odom Inc</td>\n",
+       "      <td>Managed bottom-line architecture</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>14560.0</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>158</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.611554400</td>\n",
+       "      <td>1970-01-01 00:00:01.621918800</td>\n",
+       "      <td>cat2</td>\n",
+       "      <td>subcat2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1812</td>\n",
+       "      <td>4187</td>\n",
+       "      <td>Melton, Robinson and Fritz</td>\n",
+       "      <td>Function-based leadingedge pricing structure</td>\n",
+       "      <td>108400.0</td>\n",
+       "      <td>142523.0</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>1425</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>AUD</td>\n",
+       "      <td>1970-01-01 00:00:01.608184800</td>\n",
+       "      <td>1970-01-01 00:00:01.640844000</td>\n",
+       "      <td>cat3</td>\n",
+       "      <td>subcat3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2156</td>\n",
+       "      <td>4941</td>\n",
+       "      <td>Mcdonald, Gonzalez and Ross</td>\n",
+       "      <td>Vision-oriented fresh-thinking conglomeration</td>\n",
+       "      <td>4200.0</td>\n",
+       "      <td>2477.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>24</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.634792400</td>\n",
+       "      <td>1970-01-01 00:00:01.642399200</td>\n",
+       "      <td>cat2</td>\n",
+       "      <td>subcat2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1365</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>Larson-Little</td>\n",
+       "      <td>Proactive foreground core</td>\n",
+       "      <td>7600.0</td>\n",
+       "      <td>5265.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>53</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.608530400</td>\n",
+       "      <td>1970-01-01 00:00:01.629694800</td>\n",
+       "      <td>cat4</td>\n",
+       "      <td>subcat4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>2986</td>\n",
+       "      <td>3684</td>\n",
+       "      <td>Manning-Hamilton</td>\n",
+       "      <td>Vision-oriented scalable definition</td>\n",
+       "      <td>97300.0</td>\n",
+       "      <td>153216.0</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>2043</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.609221600</td>\n",
+       "      <td>1970-01-01 00:00:01.622350800</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2031</td>\n",
+       "      <td>5784</td>\n",
+       "      <td>Butler LLC</td>\n",
+       "      <td>Future-proofed upward-trending migration</td>\n",
+       "      <td>6600.0</td>\n",
+       "      <td>4814.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>112</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.634274000</td>\n",
+       "      <td>1970-01-01 00:00:01.638252000</td>\n",
+       "      <td>cat4</td>\n",
+       "      <td>subcat4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1627</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>Ball LLC</td>\n",
+       "      <td>Right-sized full-range throughput</td>\n",
+       "      <td>7600.0</td>\n",
+       "      <td>4603.0</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>139</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>1970-01-01 00:00:01.636174800</td>\n",
+       "      <td>1970-01-01 00:00:01.639116000</td>\n",
+       "      <td>cat4</td>\n",
+       "      <td>subcat4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2175</td>\n",
+       "      <td>6073</td>\n",
+       "      <td>Taylor, Santiago and Flores</td>\n",
+       "      <td>Polarized composite customer loyalty</td>\n",
+       "      <td>66600.0</td>\n",
+       "      <td>37823.0</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>374</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.602133200</td>\n",
+       "      <td>1970-01-01 00:00:01.618117200</td>\n",
+       "      <td>cat2</td>\n",
+       "      <td>subcat8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1788</td>\n",
+       "      <td>4939</td>\n",
+       "      <td>Hernandez, Norton and Kelley</td>\n",
+       "      <td>Expanded eco-centric policy</td>\n",
+       "      <td>111100.0</td>\n",
+       "      <td>62819.0</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>1122</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1970-01-01 00:00:01.609308000</td>\n",
+       "      <td>1970-01-01 00:00:01.629262800</td>\n",
+       "      <td>cat1</td>\n",
+       "      <td>subcat1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 14 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "cf_id                      int64\n",
-       "contact_id                 int64\n",
-       "company_name              object\n",
-       "description               object\n",
-       "goal                     float64\n",
-       "pledged                  float64\n",
-       "outcome                   object\n",
-       "backers_count              int64\n",
-       "country                   object\n",
-       "currency                  object\n",
-       "launched_date     datetime64[ns]\n",
-       "end_date          datetime64[ns]\n",
-       "category_id               object\n",
-       "subcategory_id            object\n",
-       "dtype: object"
+       "     cf_id  contact_id                  company_name  \\\n",
+       "0      147        4661    Baldwin, Riley and Jackson   \n",
+       "1     1621        3765                      Odom Inc   \n",
+       "2     1812        4187    Melton, Robinson and Fritz   \n",
+       "3     2156        4941   Mcdonald, Gonzalez and Ross   \n",
+       "4     1365        2199                 Larson-Little   \n",
+       "..     ...         ...                           ...   \n",
+       "995   2986        3684              Manning-Hamilton   \n",
+       "996   2031        5784                    Butler LLC   \n",
+       "997   1627        1498                      Ball LLC   \n",
+       "998   2175        6073   Taylor, Santiago and Flores   \n",
+       "999   1788        4939  Hernandez, Norton and Kelley   \n",
+       "\n",
+       "                                       description      goal   pledged  \\\n",
+       "0             Pre-emptive tertiary standardization     100.0       0.0   \n",
+       "1                 Managed bottom-line architecture    1400.0   14560.0   \n",
+       "2     Function-based leadingedge pricing structure  108400.0  142523.0   \n",
+       "3    Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
+       "4                        Proactive foreground core    7600.0    5265.0   \n",
+       "..                                             ...       ...       ...   \n",
+       "995            Vision-oriented scalable definition   97300.0  153216.0   \n",
+       "996       Future-proofed upward-trending migration    6600.0    4814.0   \n",
+       "997              Right-sized full-range throughput    7600.0    4603.0   \n",
+       "998           Polarized composite customer loyalty   66600.0   37823.0   \n",
+       "999                    Expanded eco-centric policy  111100.0   62819.0   \n",
+       "\n",
+       "        outcome  backers_count country currency                 launched_date  \\\n",
+       "0        failed              0      CA      CAD 1970-01-01 00:00:01.581573600   \n",
+       "1    successful            158      US      USD 1970-01-01 00:00:01.611554400   \n",
+       "2    successful           1425      AU      AUD 1970-01-01 00:00:01.608184800   \n",
+       "3        failed             24      US      USD 1970-01-01 00:00:01.634792400   \n",
+       "4        failed             53      US      USD 1970-01-01 00:00:01.608530400   \n",
+       "..          ...            ...     ...      ...                           ...   \n",
+       "995  successful           2043      US      USD 1970-01-01 00:00:01.609221600   \n",
+       "996      failed            112      US      USD 1970-01-01 00:00:01.634274000   \n",
+       "997    canceled            139      IT      EUR 1970-01-01 00:00:01.636174800   \n",
+       "998      failed            374      US      USD 1970-01-01 00:00:01.602133200   \n",
+       "999    canceled           1122      US      USD 1970-01-01 00:00:01.609308000   \n",
+       "\n",
+       "                         end_date category_id subcategory_id  \n",
+       "0   1970-01-01 00:00:01.614578400        cat1        subcat1  \n",
+       "1   1970-01-01 00:00:01.621918800        cat2        subcat2  \n",
+       "2   1970-01-01 00:00:01.640844000        cat3        subcat3  \n",
+       "3   1970-01-01 00:00:01.642399200        cat2        subcat2  \n",
+       "4   1970-01-01 00:00:01.629694800        cat4        subcat4  \n",
+       "..                            ...         ...            ...  \n",
+       "995 1970-01-01 00:00:01.622350800        cat1        subcat1  \n",
+       "996 1970-01-01 00:00:01.638252000        cat4        subcat4  \n",
+       "997 1970-01-01 00:00:01.639116000        cat4        subcat4  \n",
+       "998 1970-01-01 00:00:01.618117200        cat2        subcat8  \n",
+       "999 1970-01-01 00:00:01.629262800        cat1        subcat1  \n",
+       "\n",
+       "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,12 +2230,12 @@
     "                                      'backers_count','country','currency',\n",
     "                                      'launched_date','end_date','category_id',\n",
     "                                      'subcategory_id']]\n",
-    "campaign_cleaned.dtypes"
+    "campaign_cleaned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
